tests/negative/generics/multiptr_mismatch.orng
// multiptr_mismatch.orng:11:28: error: expected a value of type `[*]T`, got a value of type `[*]Int`
//         My_Type[U](items as [*]Int)
//                           ^
// 
struct My_Type[T] {
    items: [*]T
}

impl[U] for My_Type[U] {
    fn init(items: [*]U) -> My_Type[U] {
        My_Type[U](items as [*]Int)
    }

    fn first(&self) -> U {
        self.items[0]
    }
}

fn main() -> Int {
    let items = [1, 2, 3]
    let slice = []items
    let mut my_val = My_Type[Int]::init(slice.data)
    my_val.>first()
}
